--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "stef9857-tracker.git.io",
   "version": "1.0.0",
   "description": "DECO2017 Calorie Tracker Web Application ",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "prestart": "parcel build ./public/index.html",
+    "dev": "parcel serve ./public/index.html"
   },
   "repository": {
     "type": "git",
