--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
   "dependencies": {
     "express": "^4.19.2",
     "sass": "^1.77.0"
+  },
+  "devDependencies": {
+    "@parcel/transformer-sass": "^2.12.0",
+    "parcel": "^2.12.0"
   }
 }
